--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,17 +74,26 @@ body {
     border: 1px solid #E6BBE2;
     box-shadow: -1px -1px 0px 0px #80687D;
     padding: 5px;
+    box-sizing: border-box;
+    width: 100%;
+}
+.images-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-content: center;
 }
 .images-container > figure {
     /*box-shadow: -1px -1px 0px 0px #B4B4B4;*/
-    max-width: 280px;
+    max-width: 240px;
+    padding: 5px;
     box-sizing: border-box;
     display: flex;
     flex-flow: column wrap;
 }
 .images-container > figure > img {
-    max-width: 280px;
-    max-height: 280px;
+    max-width: 240px;
+    max-height: 240px;
 }
 .search-title > img {
     padding-top: 3px;
