--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,7 @@
     font-family: 'Chakra Petch', sans-serif;
 }
 body {
+    box-sizing: border-box;
     padding: 10%;
     background: rgba(255, 243, 250, 0.74);
 }
@@ -55,7 +56,7 @@ body {
     box-sizing: border-box;
     justify-items: ;
 }
-#search-bar {
+#search-Input {
     width: 80%;
     height: 30px;
     margin: 10px;
@@ -65,7 +66,10 @@ body {
 .btn2 {
     border: 1px solid #808080;
     align-self: center;
-    padding: 3px 9px;
+    padding: 5px 9px;
+}
+.btn2 > img {
+    padding-right: 7px;
 }
 .title-blocks {
     background: #FFFAFE;
@@ -85,19 +89,23 @@ body {
 }
 .images-container > figure {
     /*box-shadow: -1px -1px 0px 0px #B4B4B4;*/
-    max-width: 240px;
-    padding: 5px;
+    max-width: 260px;
+    padding: 10px;
     box-sizing: border-box;
     display: flex;
     flex-flow: column wrap;
 }
 .images-container > figure > img {
     max-width: 240px;
-    max-height: 240px;
+    height: 240px;
 }
 .search-title > img {
     padding-top: 3px;
     float: right;
+}
+.fig-title {
+    width: auto;
+    text-align: center;
 }
 .btn3 {
     background: #4180F6;
@@ -135,6 +143,18 @@ body {
         padding: 7% 10%;
     }
 }
-/* 
+/* @media all and (min-width: 1440px) {
+    body {
+        background: grey;
+        box-sizing: border-box;
+        max-width: 1600px;
+        display: flex;
+        flex-flow: column nowrap;
+        align-content: space-between;
+        justify-content: center;
+        flex: 1;
+    }
+}
+
 
 */
