--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@
     font-family: 'Chakra Petch', sans-serif;
 }
 body {
-    background: rgba(255, 243, 250, 0.74);
+    background: #FFF4FD;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -14,7 +14,7 @@ body {
 main {
     box-sizing: border-box;
     margin: 5%;
-    background: rgba(255, 243, 250, 0.74);
+    background: #FFF4FD;
 }
 .navBar {
     display: flex;
@@ -57,7 +57,7 @@ main {
     flex-flow: row wrap;
     justify-content: center;
 }
-.dropdown-hidden {
+.hidden-element {
     display: none;
 }
 .dropdown-show {
@@ -185,4 +185,12 @@ main {
     main {
         width: 1200px;
     }
+}
+/*upload page's style*/
+video {
+    width: 100%;
+}
+.buttons-panel {
+    display: flex;
+    flex-flow: row;
 }
