stream and get video feature

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -187,10 +187,7 @@ main {
     }
 }
 /*upload page's style*/
-video {
+.gif-recorder-stylish {
     width: 100%;
-}
-.buttons-panel {
-    display: flex;
-    flex-flow: row;
+    margin: 15px;
 }
