--- a/styles/styles.css
+++ b/styles/styles.css
@@ -284,8 +284,13 @@ main {
     align-items: center;
     padding-left: 20px;
 }
-.gifo-created-btns > button {
+.gifo-created-btns > div {
+    margin: 15px 0;
+}
+.gifo-created-btns > a {
+    text-decoration: none;
     margin: 5px;
+    color: #1a1a1a;
 }
 .uploading-div-style {
     background: #FFFFFF;
